@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5269 2006/12/07 17:26:57 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5270 2006/12/09 13:00:22 toninhofwi Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-13-09 15:48 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
+  * contrib/rdd_ads/ads1.c
+    ! Changed call of AdsGetMemoDataType() by pField->uiTypeExtended in adsPutRec()
 
 2006-13-09 10:55 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
   * contrib/rdd_ads/ads1.c
